add test for non project scenarios; move to test folder; lint baybay

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "require modules from the root of your application without the ../../{im lost notation}",
   "main": "index.js",
   "scripts": {
-    "test": "ava test.spec.js"
+    "test": "time ava test/*.spec.js",
+    "lint": "standard"
   },
   "keywords": [
     "require",
@@ -19,7 +20,6 @@
   "devDependencies": {
     "ava": "^0.7.0",
     "casual": "^1.4.9",
-    "faker": "^3.0.1",
     "proxyquire": "^1.7.3",
     "sinon": "^1.17.2",
     "standard": "^5.4.1"
